--- a/directory.routing.yml
+++ b/directory.routing.yml
@@ -1,7 +1,8 @@
-directory.directory:
-  path: 'contact/directory'
-  defaults:
-    _controller: '\Drupal\directory\Controller\DirectoryController::staff'
-    _title: 'Staff Directory'
-  requirements:
-    _permission: 'access content'
+directory:
+  directory:
+    path: 'contact/directory'
+    defaults:
+      _controller: '\Drupal\directory\Controller\DirectoryController::staff'
+      _title: 'Staff Directory'
+    requirements:
+      _permission: 'access content'
