Added Staff block for department pages

--- a/directory.routing.yml
+++ b/directory.routing.yml
@@ -1,7 +1,7 @@
 directory.directory:
   path: 'contact/directory'
   defaults:
-    _controller: '\Drupal\directory\Controller\DirectoryController::staff'
+    _controller: '\Drupal\directory\Controller\DirectoryController::directory'
     _title: 'Staff Directory'
   requirements:
     _permission: 'access content'
