--- a/directory.routing.yml
+++ b/directory.routing.yml
@@ -1,3 +1,4 @@
+---
 directory.directory:
   path: 'contact/directory'
   defaults:
@@ -5,3 +6,11 @@ directory.directory:
     _title: 'Staff Directory'
   requirements:
     _permission: 'access content'
+directory.settings:
+  path: '/admin/config/directory/settings'
+  defaults:
+    _form: '\Drupal\directory\Form\SettingsForm'
+    _title: 'Directory Settings'
+  requirements:
+    _permission: 'administer site configuration'
+...
