Flag as compatible with Drupal 9
Updates #8

--- a/directory.info.yml
+++ b/directory.info.yml
@@ -1,6 +1,9 @@
-name: Directory
-description: Integration with Directory web application
-package: COB
-type: module
-core: 8.x
-configure: directory.settings
+---
+name:        'Directory'
+description: 'Integration with Directory web application'
+package:     'COB'
+type:        'module'
+core:        '8.x'
+configure:   'directory.settings'
+core_version_requirement: '^8||^9'
+...
