--- a/directory.info.yml
+++ b/directory.info.yml
@@ -4,5 +4,5 @@ description: 'Integration with Directory web application'
 package:     'COB'
 type:        'module'
 configure:   'directory.settings'
-core_version_requirement: '^9||^10'
+core_version_requirement: '^9||^10||^11'
 ...
